--- a/css/styles.css
+++ b/css/styles.css
@@ -11500,7 +11500,7 @@ header.masthead .masthead-heading {
   color: white;
   border: 7px solid #e9ecef;
   border-radius: 100%;
-  background-color: #ffc800;
+  background-color: #D61F00;
 }
 .timeline > li .timeline-image h4,
 .timeline > li .timeline-image .h4 {
